泡View： 完成基本UI

--- a/cobanBnPetSwift/Info.plist
+++ b/cobanBnPetSwift/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
-	<string>巴诺物联网dev</string>
+	<string>巴诺物联网</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
