--- a/cobanBnPetSwift/Info.plist
+++ b/cobanBnPetSwift/Info.plist
@@ -35,12 +35,13 @@
 	<string>App需要您的同意,才能访问地理位置信息以获取设备的位置信息</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>App需要您的同意,才能访问麦克风录音以发送语音给设备</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>App需要您的同意,才能访问相册以便于选取照片上传用户头像</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>App需要您的同意,才能访问相册以便于选取照片上传用户头像</string>
-    <key>NSPhotoLibraryAddUsageDescription</key>
-    <string>App需要您的同意,才能访问相册以便于选取照片上传用户头像</string>
 	<key>UIBackgroundModes</key>
 	<array>
+		<string>fetch</string>
 		<string>remote-notification</string>
 	</array>
 	<key>UIRequiredDeviceCapabilities</key>
